# skills-md-graph

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: bench_scan.rs
src/: error.rs  lib.rs  main.rs
src/analysis/: cycles.rs  isolation.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/export/: cypher.rs  mod.rs  rdf.rs
src/graph/: dot.rs  mod.rs  stats.rs
src/model/: mod.rs
src/parser/: frontmatter.rs  markdown.rs  mod.rs
src/query/: mod.rs
tests/: integration.rs
tests/fixtures/: skill-a.md  skill-b.md  skill-duplicate.md  skill-invalid.md
vscode-extension/: package.json
vscode-extension/src/: extension.ts  scanner.ts
vscode-extension/src/providers/: definition.ts  diagnostic.ts  hover.ts
