[package]
name = "skills-md-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
thiserror = "2"
anyhow = "1"
petgraph = "0.7"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync", "macros"] }
indicatif = "0.17"
toml = "0.8"

[[bench]]
name = "bench_scan"
harness = false
